Consumindo dados da sesão de  Experiêncis do Prismic

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,6 +49,10 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .sectionTitle {
   font-size: 1.6rem;
   text-transform: uppercase;
