Populando projetos, linkando sessões

--- a/src/components/Hero/styles.module.scss
+++ b/src/components/Hero/styles.module.scss
@@ -1,5 +1,5 @@
 .heroContainer {
-  background-image: url('/images/looper_bg.svg');
+  background-image: url('/assets/images/looper_bg.svg');
   background-repeat: no-repeat;
   background-position: right;
   padding: 0 2rem;
