--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -17,10 +17,13 @@
       max-width: 367px;
       max-height: 367px;
 
+      border-bottom: 4px solid var(--cyan-500);
       border-left: 4px solid var(--cyan-500);
-      border-radius: 4px;
 
-      margin-right: 12rem;
+      border-radius: 50%;
+
+      margin-right: 8rem;
+
     }
 
     h3 {
