--- a/src/components/Experiences/styles.module.scss
+++ b/src/components/Experiences/styles.module.scss
@@ -77,6 +77,7 @@
         color: var(--gray-500);
         font-weight: 300;
         line-height: 1.8rem;
+        height: 7.6rem
       }
     }
   }
