--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -99,6 +99,8 @@
           font-size: 1rem;
           margin-left: 1rem;
           text-transform: none;
+          font-weight: 500;
+          color: var(--white);
         }
       }
     }
