--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -23,7 +23,6 @@
       border-radius: 50%;
 
       margin-right: 8rem;
-
     }
 
     h3 {
@@ -102,6 +101,30 @@
           font-weight: 500;
           color: var(--white);
         }
+      }
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .aboutContent {
+
+    section {
+      flex-direction: column;
+
+      .profilePicture {
+        margin: 0 auto 4rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 900px) {
+  .aboutContent {
+
+    section {
+      .profilePicture {
+        margin-right: 4rem;
       }
     }
   }
