--- a/src/components/Experiences/styles.module.scss
+++ b/src/components/Experiences/styles.module.scss
@@ -13,11 +13,10 @@
 
     .experiencesList {
       display: flex;
-
     }
     
     aside {
-      flex-basis: 300px;
+      flex-basis: 376px;
       flex-shrink: 0;
   
       li {
@@ -78,6 +77,35 @@
         font-weight: 300;
         line-height: 1.8rem;
         height: 7.6rem
+      }
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .experiencesContent {
+    section {
+      aside {
+        flex-basis: 0;
+      }
+
+      .experienceDetails {
+        margin-left: 0;
+        margin-top: 4rem;
+      }
+    }
+  }
+
+  .experiencesList {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 1080px) {
+  .experiencesContent {
+    section {
+      aside {
+        flex-basis: 25vw;
       }
     }
   }
