--- a/src/components/Projects/styles.module.scss
+++ b/src/components/Projects/styles.module.scss
@@ -24,7 +24,8 @@
     .projectsThumbnail {
 
       img {
-        height: 200px;
+        width: 90%;
+        
         border-left: 4px solid var(--cyan-500);
         border-radius: 4px;
       }
@@ -43,7 +44,7 @@
         color: var(--gray-500);
         font-size: 1rem;
         font-weight: 300;
-        margin-bottom: 0.4rem;
+        margin-bottom: 1rem;
         height: 4rem;
         width: 80%;
       }
@@ -122,5 +123,25 @@
       }
     }
 
+  }
+}
+
+@media (max-width: 720px) {
+  .projectsContent {
+    section {
+      .projectsList {
+        flex-direction: column;
+
+        > div {
+          max-width: 100vw;
+        }
+
+        .projectsThumbnail {
+          img {
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 }
