--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -20,9 +20,10 @@
     display: flex;
     align-items: center;
 
-    img {
-      width: 1rem;
-      margin-left: 0.5rem;
+    a {
+      .logoIuriCode {
+        margin-left: 0.5rem;
+      }
     }
 
     span:hover {
