--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -15,6 +15,8 @@
 
     .profilePicture {
       width: 100%;
+      max-width: 367px;
+      // height: 100%;
 
       border-bottom: 4px solid var(--cyan-500);
       border-left: 4px solid var(--cyan-500);
